# rust-on-nails

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Earthfile  Justfile  LICENCE.md  README.md  demo-nails-app.yaml  demo-stack-app.yaml  package-lock.json  package.json  release.sh
.devcontainer/: .bash_aliases  .env  Dockerfile  devcontainer.json  docker-compose.postgres.yml  docker-compose.yml  install_cmake.sh
.github/workflows/: nails-cli-release.yml  nails-operator-release.yml  release.yml  rust-on-nails-devcontainer.yml  rust-on-nails-pipeline.yml  spell-check.yml
choreo/: go.mod  main.go
crates/db/: Cargo.toml  build.rs
crates/db/migrations/: 20241209105144_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/nails-cli/: Cargo.toml  README.md
crates/nails-cli/config/: application.yaml  cloudflare.yaml  (+9 more)
crates/stack-cli/: Cargo.toml  README.md
crates/stack-cli.com/: Cargo.toml
crates/static-website/: Cargo.toml
crates/web-assets/: Cargo.toml  build.rs  input.css  tailwind.config.js
crates/web-csr/: Cargo.toml
crates/web-csr/src/: counter.rs  lib.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  lib.rs  root.rs  settings.rs
crates/web-server/: Cargo.toml  config.rs  errors.rs  main.rs  root.rs  settings.rs  static_files.rs
dev-env-as-code/: .bash_aliases  Dockerfile  Dockerfile.devcontainer  Dockerfile.supakube  README.md  aliases.bash  devcontainer.json  docker-compose.yml
examples/clickable-protoype/: .gitignore  Cargo.toml  build.rs
examples/clickable-protoype/.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yml
examples/clickable-protoype/asset-pipeline/: index.ts
examples/clickable-protoype/asset-pipeline/scss/: badge.scss  cards.scss  forms.scss  index.scss  layout.scss  utilities.scss
examples/clickable-protoype/asset-pipeline/web-components/: side-drawer-trigger.ts  side-drawer.scss  side-drawer.ts  snack-bar.scss  snack-bar.ts
examples/clickable-protoype/src/: api_keys.rs  dashboard.rs  errors.rs  layout.rs  main.rs  subscriptions.rs  team.rs
examples/clickable-protoype/src/crud/: mod.rs
examples/clickable-protoype/templates/: layout.rs.html
examples/clickable-protoype/templates/api_keys/: index.rs.html  new.rs.html
examples/clickable-protoype/templates/crud/: empty.rs.html  filter.rs.html  index.rs.html  new.rs.html
examples/clickable-protoype/templates/dashboard/: index.rs.html
examples/clickable-protoype/templates/subscriptions/: index.rs.html
examples/clickable-protoype/templates/team/: index.rs.html  new.rs.html  switch.rs.html  view.rs.html
examples/rust-on-nails-demo/: Cargo.toml
examples/rust-on-nails-demo/app/: Cargo.toml  build.rs  package-lock.json  package.json
examples/rust-on-nails-demo/app/queries/: fortunes.sql  worlds.sql
examples/rust-on-nails-demo/app/src/: api_service.rs  config.rs  errors.rs  hybrid.rs  main.rs
examples/rust-on-nails-demo/app/src/fortunes/: index.rs  mod.rs
examples/rust-on-nails-demo/app/src/worlds/: db.rs  mod.rs
examples/rust-on-nails-demo/app/templates/fortunes/: index.rs.html
examples/server-side-rendering/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
examples/server-side-rendering/app/: build.rs
examples/server-side-rendering/app/asset-pipeline/scss/: app_layout.scss  empty_page.scss  forms.scss  index.scss
examples/server-side-rendering/app/queries/: users.sql
examples/server-side-rendering/app/src/: cornucopia.rs
examples/server-side-rendering/app/src/models/: user.rs
examples/server-side-rendering/app/tests/: config.rs
examples/server-side-rendering/asset-pipeline/: index.ts
examples/server-side-rendering/asset-pipeline/scss/: buttons.scss  cards.scss  content_layout.scss  tables.scss
examples/server-side-rendering/db/: schema.sql
examples/server-side-rendering/db/migrations/: 20220330110026_create_users_table.sql  20220421074412_add_basic_tables.sql
examples/server-side-rendering/queries/: invitations.sql
examples/server-side-rendering/src/: authentication.rs  config.rs  error.rs  main.rs
examples/server-side-rendering/templates/: layout.rs.html
examples/server-side-rendering/templates/vaults/: index.rs.html
examples/server-side-rendering/tests/: example_test.rs
nails-devcontainer/: .env.example  AGENTS.md  Justfile  README.md  dev.stack.yaml  devcontainer-template.json  stack.dev.yaml  stack.yaml
nails-devcontainer/.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yml  ps1.bash  setup-env.sh
nails-devcontainer/scripts/: README.md  build-islands  clorinde  dbmate  dev-env  psql
rust-on-nails.com/: architecture-diagram.excalidraw  config.toml
rust-on-nails.com/content/: .spelling  _index.fi.md  _index.md
rust-on-nails.com/static/: index.css  index.css.map  index.js  index.js.map  primer-index.css  primer-index.css.map  primer-index.js  primer-index.js.map  syntax-theme.css
rust-on-nails.com/templates/: index.html
rustonnails.org/: config.toml
rustonnails.org/content/: _index.md
rustonnails.org/sass/: main.scss
website/: config.toml
(+232 files in other folders)
