[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
cornucopia_async = "0.6"
deadpool-postgres = "0.12"
futures = "0.3"
postgres-types = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
