[package]
name = "web-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
daisy_rsx = "0.1"
db = { version = "0.1.0", path = "../db" }
dioxus = { version = "0.6", default-features = false, features = ["macro", "html", "signals"] }
dioxus-ssr = { version = "0.6", default-features = false }
web-assets = { version = "0.1.0", path = "../web-assets" }
web-csr = { version = "0.1.0", path = "../web-csr", features = ["native"] }
