[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

deadpool-postgres = { version = "0", features = ["serde"] }
#postgres-types = { version = "0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = [
    "with-time-0_3",
] }
time = "0.3.9"
cornucopia_client = "0"
tower-http = { version = "0", default-features = false, features = ["fs", "trace"] }
mime = "0.3.0"

[build-dependencies]
ructe = { version="0.14.0", features = ["mime03"] }

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0", default-features = false, features = [ "reqwest-rustls-tls", "tokio-runtime" ] }
