[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

# Used by cornucopia and the main app
futures = "0.3"

# Access to the database https://github.com/LouisGariepy/cornucopia
deadpool-postgres = { version = "0", features = ["serde"] }
#postgres-types = { version = "0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = [
    "with-time-0_3",
] }
tokio-postgres-rustls = "0"
time = { version = "0", default-features = false,  features = ["formatting"] }
cornucopia_client = "0"
rustls = "0"
webpki-roots = "0"

serde = { version = "1", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }

# gRPC dependencies
tonic = "0"
tonic-web = "0"
prost = "0"
# Needed for our hybrid server (i.e. gRPC and Web)
pin-project = "1"
tower = { version = "0", default-features = false }
hyper = { version = "0", features = ["server"] }

[build-dependencies]
tonic-build = "0"
ructe = { version="0.14.0", features = ["mime03"] }